[tool.poetry]
name = "inatator"
version = "1.0.0"
description = "Annotation tool for GeoModels"
authors = ["Ozel Yilmazel <ozel@yilmazel.com>"]
readme = "README.md"
packages = [
    { include = "sinr", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9"
dvc = "^2.10.2"
numpy = "^1.21.0"
pandas = "^1.3.0"
scikit-learn = "^0.24.0"
torch = "^1.9.0"
fastapi = "^0.68.0"
uvicorn = {extras = ["standard"], version = "^0.14.0"}

[tool.poetry.extras]
test = ["pytest"]
dev = [
    "ruff",
    "jupyter",
    "matplotlib",
    "seaborn",
    "sphinx",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
