[tool.poetry]
name = "inatator"
version = "1.0.0"
description = "Annotation tool for GeoModels"
authors = ["Ozel Yilmazel <ozel@yilmazel.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
dvc = "^2.10.2"
numpy = "^1.21.0"
pandas = "^1.3.0"
scikit-learn = "^0.24.0"
torch = "^1.9.0"
fastapi = "^0.68.0"
uvicorn = {extras = ["standard"], version = "^0.14.0"}

[build-system]
requires = ["poetry-core>=1.6"]
build-backend = "poetry.core.masonry.api"
